@@ -60,6 +60,7 @@ Template for new versions:
 - `suspendmanager`: stop suspending single tile stair constructions
 
 ## Misc Improvements
+- `blueprint`: capture track carving designations in addition to already-carved tracks
 
 ## Documentation
 - `installing`: add instructions for how to use Steam DFHack with non-Steam DF (for DFHack auto-updates and cloud backups)
